[workspace]
resolver = "2"
members = [
    "rust",
    "rust/macros",
    "rust/xtask",
    "board/100ask-d1-h-rs",
]

[patch.crates-io]
allwinner-hal = { git = "https://github.com/rustsbi/allwinner-hal", rev = "aa6ec965" }
allwinner-rt = { git = "https://github.com/rustsbi/allwinner-hal", rev = "aa6ec965" }
