if(CONFIG_BOARD_TINYVISION)
    add_subdirectory(tinyvision)
endif()

if(CONFIG_BOARD_YUZUKILIZARD)
    add_subdirectory(yuzukilizard)
endif()

if(CONFIG_BOARD_100ASK-T113S3)
    add_subdirectory(100ask-t113s3)
endif()

if(CONFIG_BOARD_100ASK-T113I)
    add_subdirectory(100ask-t113i)
endif()

if(CONFIG_BOARD_LONGANPI-3H)
    add_subdirectory(longanpi-3h)
endif()

if(CONFIG_BOARD_LONGANPI-4B)
    add_subdirectory(longanpi-4b)
endif()

if(CONFIG_BOARD_BINGPI-M1)
    add_subdirectory(bingpi-m1)
endif()

if(CONFIG_BOARD_100ASK_ROS)
    add_subdirectory(100ask-ros)
endif()

if(CONFIG_BOARD_DONGSHANPI_AICT)
    add_subdirectory(dongshanpi-aict)
endif()

if(CONFIG_BOARD_PROJECT_YOSEMITE)
    add_subdirectory(project-yosemite)
endif()

if(CONFIG_BOARD_LT527X)
    add_subdirectory(lt527x)
endif()