if(CONFIG_BOARD_TINYVISION)
    add_subdirectory(tinyvision)
endif()

if(CONFIG_BOARD_YUZUKILIZARD)
    add_subdirectory(yuzukilizard)
endif()

if(CONFIG_BOARD_100ASK-T113S3)
    add_subdirectory(100ask-t113s3)
endif()

if(CONFIG_BOARD_100ASK-T113I)
    add_subdirectory(100ask-t113i)
endif()

if(CONFIG_BOARD_LONGANPI-3H)
    add_subdirectory(longanpi-3h)
endif()

if(CONFIG_BOARD_LONGANPI-4B)
    add_subdirectory(longanpi-4b)
endif()

if(CONFIG_BOARD_MCORE-R818)
    add_subdirectory(mcore-r818)
endif()

if(CONFIG_BOARD_DONGSHANPI_AICT)
    add_subdirectory(dongshanpi-aict)
endif()

if(CONFIG_BOARD_PROJECT_YOSEMITE)
    add_subdirectory(project-yosemite)
endif()

if(CONFIG_BOARD_LT527X)
    add_subdirectory(lt527x)
endif()

if(CONFIG_BOARD_100ASK_D1_H)
    add_subdirectory(100ask-d1-h)
endif()

if(CONFIG_BOARD_YUZUKIHOMEKIT)
    add_subdirectory(yuzukihomekit)
endif()

if(CONFIG_BOARD_AVAOTA-A1)
    add_subdirectory(avaota-a1)
endif()

if(CONFIG_BOARD_AVAOTA-F1)
    add_subdirectory(avaota-f1)
endif()

if(CONFIG_BOARD_RADXA-CUBIE-A7A)
    add_subdirectory(radxa-cubie-a7a)
endif()

if(CONFIG_BOARD_AVAOTA-86BOX)
    add_subdirectory(avaota-86box)
endif()

if(CONFIG_BOARD_TLT536-EVM)
    add_subdirectory(tlt536-evm)
endif()

if(CONFIG_BOARD_AVAOTA-F2)
    add_subdirectory(avaota-f2)
endif()

if(CONFIG_BOARD_AVAOTA_M1)
    add_subdirectory(avaota-m1)
endif()
