[package]
name = "syterkit"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
naked-function = "0.1.5"
allwinner-hal = "0.0.0"
allwinner-rt = "0.0.0"
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
spin = "0.9"
syterkit-macros = { path = "macros" }
embedded-time = "0.12.1"
log = "0.4.22"
embedded-sdmmc = "0.8.1"
heapless = { version = "0.8.0", features = ["serde"] }
picotoml = { git = "https://github.com/rustsbi/poplar", branch = "refactor/riscv", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[build-dependencies]
rustc_version = "0.4.1"

[lib]
name = "syterkit"
test = false
bench = false

[features]
default = ["nezha"]
nezha = []
lichee = []

sun20iw1 = []
