cargo-features = ["per-package-target"]

[package]
name = "syterkit-100ask-d1-h"
version = "0.0.0"
edition = "2021"
default-target = "riscv64imac-unknown-none-elf"

[dependencies]
panic-halt = "0.2.0"
embedded-hal = "1.0.0"
syterkit = { path = "../../rust", features = ["sun20iw1"]}

[[bin]]
name = "syterkit-100ask-d1-h"
test = false
bench = false

[[bin]]
name = "hello-world"
test = false
bench = false

[[bin]]
name = "init-dram"
test = false
bench = false

[[bin]]
name = "led-lightup"
test = false
bench = false
