cargo-features = ["per-package-target"]

[package]
name = "syterkit-100ask-d1-h"
version = "0.0.0"
edition = "2021"
default-target = "riscv64imac-unknown-none-elf"

[dependencies]
embedded-hal = "1.0.0"
embedded-cli = "0.2.1"
embedded-io = "0.6.1"
embedded-time = "0.12.1"
riscv = "0.12.1"
panic-halt = "0.2.0"
syterkit = { path = "../../rust", features = ["sun20iw1"] }
allwinner-hal = "0.0.0"
ufmt = "0.2.0"
num-traits = { version = "0.2.19", default-features = false }
# log = "0.4.22"

[[bin]]
name = "syterkit-100ask-d1-h"
test = false
bench = false

[[bin]]
name = "hello-world"
test = false
bench = false

[[bin]]
name = "init-dram"
test = false
bench = false

[[bin]]
name = "led-lightup"
test = false
bench = false
