if (CONFIG_CHIP_SUN8IW21)
    add_subdirectory(sun8iw21)
elseif(CONFIG_CHIP_SUN8IW20)
    add_subdirectory(sun8iw20)
elseif(CONFIG_CHIP_SUN20IW1)
    add_subdirectory(sun20iw1)
elseif(CONFIG_CHIP_SUN50IW9)
    add_subdirectory(sun50iw9)
elseif(CONFIG_CHIP_SUN55IW3)
    add_subdirectory(sun55iw3)
elseif(CONFIG_CHIP_SUN50IW10)
    add_subdirectory(sun50iw10)
elseif(CONFIG_CHIP_SUN300IW1)
    add_subdirectory(sun300iw1)
elseif(CONFIG_CHIP_SUN60IW2)
    add_subdirectory(sun60iw2)
elseif(CONFIG_CHIP_SUN55IW6)
    add_subdirectory(sun55iw6)
elseif(CONFIG_CHIP_SUN252IW1)
    add_subdirectory(sun252iw1)
elseif(CONFIG_CHIP_SUN65IW1)
    add_subdirectory(sun65iw1)
endif()
